Bug 464499 - Vertical scrollbar in header pane after viewing a message with tag, r=philor

--- a/mail/base/content/messenger.css
+++ b/mail/base/content/messenger.css
@@ -103,6 +103,10 @@ mail-tagfield {
   -moz-binding: url("chrome://messenger/content/mailWidgets.xml#mail-headerfield-tags");
 }
 
+mail-tagfield[collapsed="true"] {
+  display: none;
+}
+
 searchattribute {
   -moz-binding: url("chrome://messenger/content/mailWidgets.xml#searchattribute");
 }
